improvement resizable gui